feat: update current user
